2002-09-19  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amverifyrun.sh.in: New program.
	* man/amverifyrun.8.in: Man page for amverifyrun.
	* configure.in (AC_OUTPUT): add man/amverifyrun.8 and
	  server-src/amverifyrun.sh.
	* man/Makefile.am (SERVER_MAN_PAGES): Add amverifyrun.8.
	* man/amanda.8.in: Add amdd, ammt and amverifyrun in SEE ALSO.
	* man/amverify.8.in: Add amverifyrun(8) in SEE ALSO.
	* server-src/Makefile.am (sbin_SCRIPTS): Add amverifyrun.

2002-09-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amverify.sh.in: Accept runtapes as a third argument.
	* man/amverify.8.in: Document it.

2002-09-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* config/missing: Updated from automake-1.5.

2002-09-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* config/config.guess: Updated from ftp://ftp.gnu.org/gnu/config/
	* config/config.sub: Updated from ftp://ftp.gnu.org/gnu/config/

2002-09-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendsize.c (getsize_dump): Print the fstype.
	* client-src/sendbackup-dump.c (start_backup): Print the fstype.

2002-09-16  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by  Florian Hars <hars@bik-gmbh.de>

	* changer-src/chg-zd-mtx.sh.in: Fix default value for cleancycle.

2002-09-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/extract_list.c (extract_files): print tape drive
	  and host before asking to load tape.

2002-09-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/taper.c (read_file): Initialize file, 
	  stat(file.cont_filename) before opening it.
          
2002-09-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amverify.sh.in: Don't check that the device is
	  a character device, it could be a file: or rait:

2002-09-06  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/amfeatures.c (am_set_default_feature_set):