@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: getfsent.c,v 1.26 2002/03/24 00:11:44 jrjackson Exp $
+ * $Id: getfsent.c,v 1.27 2002/09/30 18:39:40 martinea Exp $
  *
  * generic version of code to read fstab
  */
@@ -164,9 +164,13 @@ int open_fstab()
 # if defined(MOUNTED)
     fstabf2 = setmntent(MOUNTED, "r");
 # endif
+# if defined(MNTTAB)
     fstabf3 = setmntent(MNTTAB, "r");
+# endif
 #else
+# if defined(MNTTAB)
     fstabf3 = fopen(MNTTAB, "r");
+# endif
 #endif
     return (fstabf1 != NULL || fstabf2 != NULL || fstabf3 != NULL);
 }
